# FYT_WS

./: .gitignore  FYT_WS自瞄效果优化指导文档.md  开发提交流程.md
imu/src/DM_IMU/: .gitignore  CMakeLists.txt  package.xml
imu/src/DM_IMU/src/: imu_driver_node.cpp
imu/src/serial/: CMakeLists.txt  package.xml
src/config/: robomaster_vision_config.yaml
src/rm_auto_aim/armor_detector/: CMakeLists.txt  package.xml
src/rm_auto_aim/armor_detector/cmake_modules/: FindG2O.cmake
src/rm_auto_aim/armor_detector/include/armor_detector/: armor_detector.hpp  armor_detector_node.hpp  detector_base.hpp  types.hpp  yolo_detector.hpp
src/rm_auto_aim/armor_detector/src/: armor_detector.cpp  armor_detector_node.cpp  armor_pose_estimator.cpp  yolo_detector.cpp
src/rm_auto_aim/armor_solver/: CMakeLists.txt
src/rm_auto_aim/armor_solver/include/armor_solver/: armor_solver.hpp  armor_solver_node.hpp  armor_tracker.hpp  motion_model.hpp  planner.hpp
src/rm_auto_aim/armor_solver/include/armor_solver/tinympc/: admm.hpp  codegen.hpp  error.hpp  rho_benchmark.hpp  tiny_api.hpp
src/rm_auto_aim/armor_solver/src/: armor_solver.cpp  armor_solver_node.cpp  armor_tracker.cpp  planner.cpp
src/rm_auto_aim/armor_solver/src/tinympc/: admm.cpp  codegen.cpp  rho_benchmark.cpp  tiny_api.cpp
src/rm_bringup/config/: camera_calib.yaml  camera_config.yaml  camera_info.yaml  launch_params.yaml
src/rm_bringup/config/node_params/: armor_detector_params.yaml  armor_solver_params.yaml  camera_driver_params.yaml  serial_driver_params.yaml  video_player_params.yaml
src/rm_bringup/launch/: bringup.launch.py
src/rm_hardware_driver/rm_camera_driver/: CMakeLists.txt  package.xml
src/rm_hardware_driver/rm_camera_driver/include/: image_encodings.hpp  performance_monitor.hpp  thread_safe_queue.hpp
src/rm_hardware_driver/rm_camera_driver/include/hikvision/: hikcamera.hpp
src/rm_hardware_driver/rm_camera_driver/src/: hikcamera.cpp
src/rm_hardware_driver/rm_serial_driver/: CMakeLists.txt  package.xml
src/rm_hardware_driver/rm_serial_driver/include/rm_serial_driver/: protocol.hpp  protocol_factory.hpp  serial_driver_node.hpp
src/rm_hardware_driver/rm_serial_driver/include/rm_serial_driver/protocol/: infantry_protocol.hpp
src/rm_hardware_driver/rm_serial_driver/src/: serial_driver_node.cpp  virtual_serial_node.cpp
src/rm_hardware_driver/rm_serial_driver/src/protocol/: default_protocol.cpp  infantry_protocol.cpp  sentry_protocol.cpp
src/rm_interfaces/: CMakeLists.txt
src/rm_interfaces/msg/: Armor.msg  GimbalCmd.msg  GimbalState.msg  SerialReceiveData.msg
src/rm_rune/rune_solver/src/: rune_solver.cpp  rune_solver_node.cpp
src/rm_utils/include/rm_utils/math/: extended_kalman_filter.hpp
